issues with email border, collection box top spacing nad scrolling on medium screens resolved

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -50,6 +50,7 @@ $control-height: 2.5rem;
         border-radius: 0.25rem;
         border: none;
         outline: 1px solid map-get($colors, 'mid-pink');
+  
         display: block;
         margin: 1rem auto 0;
 
@@ -62,7 +63,7 @@ $control-height: 2.5rem;
         }
 
         &:focus {
-            border: 1px solid map-get($colors, 'dark=pink');
+            outline: 2px solid map-get($colors, 'mid-pink');
         }
     }
 
@@ -172,8 +173,11 @@ $control-height: 2.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
-      
+        background-color: white;      
+    }
+
+    .photo-collection-frame-outer {
+        align-items: flex-start;
     }
 
     .random-photo-frame-outer {
@@ -271,8 +275,7 @@ $control-height: 2.5rem;
 
 .main .photo-collection { 
     width: 100%;     
-    margin: 0 auto; 
-    margin-top: -2rem;    
+    margin: 0 auto;    
  }  
 
  .photo-collection .heading {
@@ -310,9 +313,15 @@ $control-height: 2.5rem;
         flex-wrap: wrap;
         justify-content: center;
         gap: 1rem;
-        height: 20rem;
-        overflow-y: auto;      
+        height: auto;       
     }
+
+    @include xl {
+        height: 25rem;
+        overflow-y: auto;
+    }
+
+    
  }
 
 //flex item for the above flex container
